versions/26.2/sv/bridge.md
- Syrenivå i blodet: `bridge:root=com.apple.OxygenSaturationSettings`
- Handtvätt: `bridge:root=com.apple.BrookBridgeSettings`
- Handtvätt → Tillåt notiser: `bridge:root=com.apple.BrookBridgeSettings#ALLOW_NOTIFICATIONS_ID`
- Handtvätt → Skicka till Notiscenter: `bridge:root=com.apple.BrookBridgeSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- Handtvätt → Notiser av: `bridge:root=com.apple.BrookBridgeSettings#NOTIFICATIONS_OFF_ID`
- Handtvätt → Notisgruppering: `bridge:root=com.apple.BrookBridgeSettings&path=NOTIFICATION_COALESCING_ID`
- Handtvätt → Timer för handtvätt: `bridge:root=com.apple.BrookBridgeSettings#HANDWASHING_TIMER_ID`
- Visning och ljusstyrka: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID`
- Visning och ljusstyrka → Tidslängd för aktiv skärm: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=WAKE_DURATION_SELECTION_KEY`
- Visning och ljusstyrka → Tidslängd för aktiv skärm → VID TRYCK: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=WAKE_DURATION_SELECTION_KEY#ON_TAP_GROUP_ID`
- Visning och ljusstyrka → Tidslängd för aktiv skärm → Väck i 15 sekunder: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=WAKE_DURATION_SELECTION_KEY#SHORT_WAKE_ID`
- Visning och ljusstyrka → Tidslängd för aktiv skärm → Väck i 70 sekunder: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=WAKE_DURATION_SELECTION_KEY#LONG_WAKE_ID`
- Visning och ljusstyrka → Ljusstyrka: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID#BRIGHTNESS_LABEL`
- Visning och ljusstyrka → Alltid på: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID`
- Visning och ljusstyrka → Alltid på → Alltid på: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID#TRITIUM_ID`
- Visning och ljusstyrka → Alltid på → HANDLEDEN EJ HÖJD: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID#TRITIUM_PRIVACY_GROUP_ID`
- Visning och ljusstyrka → Alltid på → Visa liveaktiviteter: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_LIVE_ACTIVITIES_ID`
- Visning och ljusstyrka → Alltid på → Visa liveaktiviteter → Visa liveaktiviteter: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_LIVE_ACTIVITIES_ID#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- Visning och ljusstyrka → Alltid på → Visa appar: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_APPS_ID`
- Visning och ljusstyrka → Alltid på → Visa appar → Visa appar: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_APPS_ID#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- Visning och ljusstyrka → Alltid på → Visa appar → APPAR: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_APPS_ID#APP_GROUP_ID`
- Visning och ljusstyrka → Alltid på → Visa appar → App Store: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_APPS_ID#com.apple.AppStore`
- Visning och ljusstyrka → Alltid på → Visa appar → Nike Run Club: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_APPS_ID#com.nike.nikeplus-gps.watchkitapp`
- Visning och ljusstyrka → Alltid på → Visa appar → Telefon: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_APPS_ID#com.apple.NanoPhone`
- Visning och ljusstyrka → Alltid på → Visa appar → Bilder: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_APPS_ID#com.apple.NanoPhotos`
- Visning och ljusstyrka → Alltid på → Visa appar → Inställningar: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_APPS_ID#com.apple.NanoSettings`
- Visning och ljusstyrka → Alltid på → Visa appar → Tap-to-Radar: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_APPS_ID#com.apple.NanoTapToRadar`
- Visning och ljusstyrka → Alltid på → Visa notiser: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID`
- Visning och ljusstyrka → Alltid på → Visa notiser → Visa notiser: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- Visning och ljusstyrka → Alltid på → Visa notiser → APPLE WATCH-APPAR | IPHONE-APPAR: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#APP_GROUP_ID`
- Visning och ljusstyrka → Alltid på → Visa notiser → App Store: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.AppStore`
- Visning och ljusstyrka → Alltid på → Visa notiser → Nike Run Club: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.nike.nikeplus-gps.watchkitapp`
- Visning och ljusstyrka → Alltid på → Visa notiser → Telefon: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.NanoPhone`
- Visning och ljusstyrka → Alltid på → Visa notiser → Bilder: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.NanoPhotos`
- Visning och ljusstyrka → Alltid på → Visa notiser → Inställningar: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.NanoSettings`
- Visning och ljusstyrka → Alltid på → Visa notiser → Tap-to-Radar: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.NanoTapToRadar`
- Visning och ljusstyrka → Alltid på → Visa notiser → Hjälpmedelsinställningar: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.accessibility.TeachableMomentsNotifications`
- Visning och ljusstyrka → Alltid på → Visa notiser → Böcker: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.iBooks`
- Visning och ljusstyrka → Alltid på → Visa notiser → Caffè Macs: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.ist.CaffeMacsApp`
- Visning och ljusstyrka → Alltid på → Visa notiser → Kalender: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.mobilecal`
- Visning och ljusstyrka → Alltid på → Visa notiser → Kamera: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.camera`
- Visning och ljusstyrka → Alltid på → Visa notiser → Anslut: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.ist.AppleConnect`
- Visning och ljusstyrka → Alltid på → Visa notiser → Diagnosrapporterare: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.DiagnosticsReporter`
- Visning och ljusstyrka → Alltid på → Visa notiser → Feedback internt: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.FeedbackInternal`
- Visning och ljusstyrka → Alltid på → Visa notiser → Fitness: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.Fitness`
- Visning och ljusstyrka → Alltid på → Visa notiser → Game Center: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.gamecenter`
- Visning och ljusstyrka → Alltid på → Visa notiser → Hälsa: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.Health`
- Visning och ljusstyrka → Alltid på → Visa notiser → Livability: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.Livability`
- Visning och ljusstyrka → Alltid på → Visa notiser → Mail: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.mobilemail`
- Visning och ljusstyrka → Alltid på → Visa notiser → Meddelanden: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.MobileSMS`
- Visning och ljusstyrka → Alltid på → Visa notiser → Self Service: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.jamfsoftware.selfservice`
- Visning och ljusstyrka → Alltid på → Visa notiser → Spårningsnotiser: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.FindMySafetyAlertsNotifications`
- Visning och ljusstyrka → Alltid på → Visa notiser → Väder: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_NOTIFICATIONS_ID#com.apple.weather`
- Visning och ljusstyrka → Alltid på → Visa komplikationsdata: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_COMPLICATIONS_DATA_ID`
- Visning och ljusstyrka → Alltid på → Visa komplikationsdata → Visa komplikationsdata: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_COMPLICATIONS_DATA_ID#Show%20Complication%20Data`
- Visning och ljusstyrka → Alltid på → Visa komplikationsdata → Appar: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_COMPLICATIONS_DATA_ID#Apps`
- Visning och ljusstyrka → Alltid på → Visa komplikationsdata → Läser in…: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_COMPLICATIONS_DATA_ID#Loading%E2%80%A6`
- Visning och ljusstyrka → Alltid på → Visa komplikationsdata → Siri: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_COMPLICATIONS_DATA_ID#Siri`
- Visning och ljusstyrka → Alltid på → Visa komplikationsdata → Siri-kort: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID&path=TRITIUM_ID/SHOW_COMPLICATIONS_DATA_ID#Siri%20Cards`
- Visning och ljusstyrka → Textstorlek: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID#TEXT_SIZE`
- Visning och ljusstyrka → Fet text: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID#BOLD_TEXT`
- Visning och ljusstyrka → Väck upp: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID#Wake`
- Visning och ljusstyrka → Väck vid handledshöjning: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID#WAKE_SCREEN_ON_WRIST_RAISE_SWITCH_ID`
- Visning och ljusstyrka → Väck när kronan vrids: `bridge:root=DISPLAY_AND_BRIGHTNESS_ID#WAKE_SCREEN_ON_CROWN_UP_SWITCH_ID`
- Bilder: `bridge:root=com.apple.NanoPhotosBridgeSettings`
- Bilder → Bildsynkronisering: `bridge:root=com.apple.NanoPhotosBridgeSettings#Photo%20Syncing`
- Bilder → Minnen: `bridge:root=com.apple.NanoPhotosBridgeSettings#Memories`
- Bilder → Synkronisera minnen: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Memories`
- Bilder → Bilder i blickfånget: `bridge:root=com.apple.NanoPhotosBridgeSettings#Featured%20Photos`
- Bilder → Synkronisera bilder i blickfånget: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Featured%20Photos`
- Bilder → Album: `bridge:root=com.apple.NanoPhotosBridgeSettings#Album`
- Bilder → Synkronisera album: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Sync%20Album`
- Bilder → Bildbegränsning: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Photos%20Limit`
- Bilder → Notisinställningar: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Bilder → Spegla min iPhone: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_MY_COMPANION_ID`
- Bilder → Anpassat: `bridge:root=com.apple.NanoPhotosBridgeSettings#CUSTOM_ID`
- Komplikationer: `bridge:root=COMPLICATIONS`
- Kontrollcenter: `bridge:root=CONTROL_CENTER_ID`
- Kontrollcenter → Återställ layouten för Kontrollcenter: `bridge:root=CONTROL_CENTER_ID#CONTROL_CENTER_RESET_ID`
- Appvy: `bridge:root=APP_VIEW_ID`
- Allmänt: `bridge:root=GENERAL_LINK`
- Allmänt → Om: `bridge:root=GENERAL_LINK&path=ABOUT`
- Allmänt → Om → Namn: `bridge:root=GENERAL_LINK&path=ABOUT/NAME_CELL_ID`
- Allmänt → Om → watchOS-version: `bridge:root=GENERAL_LINK&path=ABOUT#OS_VERSION_CELL_ID`
- Allmänt → Om → Modellnamn: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_MARKETING_NAME_CELL_ID`
- Allmänt → Om → Modellinformation: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_DETAIL_CELL_ID`
- Allmänt → Om → Modellnummer: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_MODEL_CELL_ID`
- Allmänt → Om → Serienummer: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_SERIAL_NUMBER_CELL_ID`
- Allmänt → Om → Låtar: `bridge:root=GENERAL_LINK&path=ABOUT#SONGS_CELL_ID`
- Allmänt → Om → Bilder: `bridge:root=GENERAL_LINK&path=ABOUT#PHOTOS_CELL_ID`
- Allmänt → Om → Appar: `bridge:root=GENERAL_LINK&path=ABOUT#APPLICATIONS_CELL_ID`
- Allmänt → Om → Kapacitet: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_CAPACITY_CELL_ID`
- Allmänt → Om → Tillgängligt: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_AVAILABLE_CELL_ID`
- Allmänt → Om → Operatör: `bridge:root=GENERAL_LINK&path=ABOUT#CARRIER_CELL_ID`
- Allmänt → Om → Bluetooth: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_BLUETOOTH_ADDRESS_CELL_ID`
- Allmänt → Om → IMEI: `bridge:root=GENERAL_LINK&path=ABOUT#IMEI_CELL_ID`
- Allmänt → Om → ICCID: `bridge:root=GENERAL_LINK&path=ABOUT#ICCID_CELL_ID`
- Allmänt → Om → EID: `bridge:root=GENERAL_LINK&path=ABOUT/EID_CELL_ID`
- Allmänt → Om → SEID: `bridge:root=GENERAL_LINK&path=ABOUT/DEVICE_SEID_CELL_ID`
- Allmänt → Om → Villkor: `bridge:root=GENERAL_LINK&path=ABOUT/LEGAL_CELL_ID`
- Allmänt → Om → Apple Watch Användarhandbok: `bridge:root=GENERAL_LINK&path=ABOUT#SHOW_MANUAL_CELL_ID`
- Allmänt → Programuppdatering: `bridge:root=GENERAL_LINK&path=SOFTWARE_UPDATE_LINK`
- Allmänt → Automatisk appinstallation: `bridge:root=GENERAL_LINK#AUTO_APP_INSTALL_SWITCH_ID`
- Allmänt → Flygplansläge: `bridge:root=GENERAL_LINK&path=AIRPLANE_MODE_ID`
- Allmänt → Fokus: `bridge:root=GENERAL_LINK&path=FOCUS_ID`
- Allmänt → Fokus → Spegla min iPhone: `bridge:root=GENERAL_LINK&path=FOCUS_ID#Mirror%20my%20iPhone`
- Allmänt → Skärmriktning: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION_ID`
- Allmänt → Skärmriktning → Bär Apple Watch på: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION_ID#WRIST_CHOICE_ID`
- Allmänt → Skärmriktning → Vänster handled: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION_ID#LEFT_HAND_ID`
- Allmänt → Skärmriktning → Höger handled: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION_ID#RIGHT_HAND_ID`
- Allmänt → Skärmriktning → Digital Crown på vänster sida: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION_ID#LISA_ON_LEFT_ID`
- Allmänt → Skärmriktning → Digital Crown på höger sida: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION_ID#LISA_ON_RIGHT_ID`
- Allmänt → Apple-konto: `bridge:root=GENERAL_LINK&path=LINK_WITH_ICLOUD_LINK`
- Allmänt → Aktivera diktering: `bridge:root=GENERAL_LINK#DICTATION_CELL_ID`
- Allmänt → Automatiska skiljetecken: `bridge:root=GENERAL_LINK#DICTATION_AUTO_PUNCTUATION_CELL_ID`
- Allmänt → Aktivera Handoff: `bridge:root=GENERAL_LINK#CONTINUITY_ID`
- Allmänt → Sängbordsläge: `bridge:root=GENERAL_LINK#NIGHTSTAND_CELL_ID`
- Allmänt → Aktivera skärmavbilder: `bridge:root=GENERAL_LINK#BUTTON_CHORD_CELL_ID`
- Allmänt → Lagring | Strömsparläge | Tid sedan full uppladdning | Vänteläge: `bridge:root=GENERAL_LINK&path=USAGE_LINK`
- Allmänt → Profil: `bridge:root=GENERAL_LINK&path=ManagedConfigurationList`
- Allmänt → Diagnosloggar: `bridge:root=GENERAL_LINK&path=DIAGNOSTIC_LOG_BROWSER`
- Allmänt → Diagnosloggar → Läser in…: `bridge:root=GENERAL_LINK&path=DIAGNOSTIC_LOG_BROWSER#Loading%E2%80%A6`
- Allmänt → Kopiera Watch-analys: `bridge:root=GENERAL_LINK#LOGS_CELL_ID`
- Allmänt → Nollställ: `bridge:root=GENERAL_LINK&path=RESET_ID`
- Allmänt → ÅTERGÅ TILL KLOCKAN: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK_ID`
- Allmänt → ÅTERGÅ TILL KLOCKAN → ÅTERGÅ TILL KLOCKAN: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK_ID#CSLPRFReturnToClockGroupID`
- Allmänt → ÅTERGÅ TILL KLOCKAN → Alltid: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK_ID#RETURN_TO_CLOCK_ALWAYS`
- Allmänt → ÅTERGÅ TILL KLOCKAN → Efter 2 minuter: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK_ID#RETURN_TO_CLOCK_AFTER_2_MINUTES`
- Allmänt → ÅTERGÅ TILL KLOCKAN → Efter 1 timme: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK_ID#RETURN_TO_CLOCK_AFTER_1_HOUR`
- Allmänt → ÅTERGÅ TILL KLOCKAN → APPAR: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK_ID#APP_GROUP_ID`
- Allmänt → Appaktiviteter i bakgrunden: `bridge:root=GENERAL_LINK&path=BAR_ROW_ID`
- Allmänt → Appaktiviteter i bakgrunden → Appaktiviteter i bakgrunden: `bridge:root=GENERAL_LINK&path=BAR_ROW_ID#BACKGROUND_APP_UPDATING_CELL_ID`
- Allmänt → Språk och region: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION_ID`
- Allmänt → Språk och region → Spegla min iPhone: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION_ID#MIRROR_MY_COMPANION_ID`
- Allmänt → Språk och region → Anpassat: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION_ID#CUSTOM_ID`
- Allmänt → Starta automatiskt när den är under vatten: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH`
- Allmänt → Starta automatiskt: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH_ID`
- Allmänt → Wake Screen: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN`
- Allmänt → Wake Screen → Spelas nu: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN#AUTO_LAUNCH_MEDIA`
- Ljud och haptik: `bridge:root=SOUNDS_ID`
- Ljud och haptik → Varningsvolym: `bridge:root=SOUNDS_ID#AUDIO_SLIDER`
- Ljud och haptik → Ring- och ljudsignaler: `bridge:root=SOUNDS_ID#RINGTONE_AND_ALERTS_SECTION_TITLE`
- Ljud och haptik → Tyst läge: `bridge:root=SOUNDS_ID#audio_mute_switch`
- Ljud och haptik → Justera volymen automatiskt: `bridge:root=SOUNDS_ID#contextual_volume_switch`
- Ljud och haptik → Nivå: `bridge:root=SOUNDS_ID&path=contextual_volume_profile`
- Ljud och haptik → Nivå → Starkare ljud: `bridge:root=SOUNDS_ID&path=contextual_volume_profile#CONTEXTUAL_VOLUME_PROFILE_LOUDER_ID`
- Ljud och haptik → Nivå → Förval: `bridge:root=SOUNDS_ID&path=contextual_volume_profile#CONTEXTUAL_VOLUME_PROFILE_DEFAULT_ID`
- Ljud och haptik → Nivå → Tystare ljud: `bridge:root=SOUNDS_ID&path=contextual_volume_profile#CONTEXTUAL_VOLUME_PROFILE_QUIETER_ID`
- Ljud och haptik → Haptik: `bridge:root=SOUNDS_ID&path=HAPTICS_ID`
- Ljud och haptik → Haptik → Av: `bridge:root=SOUNDS_ID&path=HAPTICS_ID#OFF_ITEM_ID`
- Ljud och haptik → Haptik → Förval: `bridge:root=SOUNDS_ID&path=HAPTICS_ID#DEFAULT_ITEM_ID`
- Ljud och haptik → Haptik → Tydlig: `bridge:root=SOUNDS_ID&path=HAPTICS_ID#PROMINENT_ITEM_ID`
- Ljud och haptik → Ringsignal: `bridge:root=SOUNDS_ID&path=SOUND_AND_HAPTIC_PATTERNS_RINGTONE_ID`
- Ljud och haptik → SMS-signal: `bridge:root=SOUNDS_ID&path=SOUND_AND_HAPTIC_PATTERNS_TEXTTONE_ID`
- Ljud och haptik → Nytt mejl: `bridge:root=SOUNDS_ID&path=SOUND_AND_HAPTIC_PATTERNS_NEWMAIL_ID`
- Ljud och haptik → Kalenderpåminnelser: `bridge:root=SOUNDS_ID&path=SOUND_AND_HAPTIC_PATTERNS_CALENDARALERTS_ID`
- Ljud och haptik → Påminnelseljud: `bridge:root=SOUNDS_ID&path=SOUND_AND_HAPTIC_PATTERNS_REMINDERALERTS_ID`
- Ljud och haptik → Förvalda ljud: `bridge:root=SOUNDS_ID&path=SOUND_AND_HAPTIC_PATTERNS_DEFAULTALERTS_ID`
- Ljud och haptik → Ljud i hörlurar: `bridge:root=SOUNDS_ID#HEADPHONE_AUDIO_GROUP`
- Ljud och haptik → Säkerhet med hörlurar: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING`
- Ljud och haptik → Säkerhet med hörlurar → Notiser om hörlurar: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneNotificationsSwitchKey`
- Ljud och haptik → Säkerhet med hörlurar → Dämpa starka ljud: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneLevelLimitSwitchKey`
- Ljud och haptik → Systemljud och haptik: `bridge:root=SOUNDS_ID#JACKRABBIT_GROUP_ID`
- Ljud och haptik → Kronhaptik: `bridge:root=SOUNDS_ID#JACKRABBIT_ID`
- Ljud och haptik → Systemhaptik: `bridge:root=SOUNDS_ID#SYSTEM_HAPTICS_ID`
- Nödanrop SOS: `bridge:root=SOS_MODE_ID`
- Integritet: `bridge:root=PRIVACY_ID`
- Integritet → Handledstemperatur: `bridge:root=PRIVACY_ID#WRIST_TEMPERATURE_SWITCH_ID`
- Skärmtid: `bridge:root=SCREEN_TIME_ID`
- Nike Run Club: `bridge:root=VICTORY_ROW_ID`
- Nike Run Club → Visa appen på Apple Watch: `bridge:root=VICTORY_ROW_ID#SHOWS_ON_GIZMO`
- Tips: `bridge:root=com.apple.NanoTipsBridgeSettings`
- Tips → Tillåt notiser: `bridge:root=com.apple.NanoTipsBridgeSettings#ALLOW_NOTIFICATIONS_ID`
- Tips → Skicka till Notiscenter: `bridge:root=com.apple.NanoTipsBridgeSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- Tips → Notiser av: `bridge:root=com.apple.NanoTipsBridgeSettings#NOTIFICATIONS_OFF_ID`
- Tips → Notisgruppering: `bridge:root=com.apple.NanoTipsBridgeSettings&path=NOTIFICATION_COALESCING_ID`
- Klocka: `bridge:root=com.apple.NanoClockBridgeSettings`
- Klocka → 24-timmarsklocka: `bridge:root=com.apple.NanoClockBridgeSettings#24-Hour%20Time`
- Klocka → Klockspel: `bridge:root=com.apple.NanoClockBridgeSettings#Chimes`
- Klocka → Ljud: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds`
- Klocka → Ljud → Klockor: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Bells`
- Klocka → Ljud → Fåglar: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Birds`
- Klocka → Läs upp tid: `bridge:root=com.apple.NanoClockBridgeSettings#Speak%20Time`
- Klocka → Styr med tyst läge: `bridge:root=com.apple.NanoClockBridgeSettings#Control%20With%20Silent%20Mode`
- Klocka → Läs alltid upp: `bridge:root=com.apple.NanoClockBridgeSettings#Always%20Speak`
- Klocka → Haptisk tid: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time`
- Klocka → Haptisk tid → Haptisk tid: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Taptic%20Time`
- Klocka → Haptisk tid → Siffror: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Digits`
- Klocka → Haptisk tid → Kort: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Terse`
- Klocka → Haptisk tid → Morse-signal: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Morse%20Code`
- Klocka → Push-notiser från iPhone: `bridge:root=com.apple.NanoClockBridgeSettings#Push%20Alerts%20from%20iPhone`
- Klocka → Notisindikator: `bridge:root=com.apple.NanoClockBridgeSettings#Notifications%20Indicator`
- Klocka → Monogram: `bridge:root=com.apple.NanoClockBridgeSettings&path=MONOGRAM_ID`
- Klocka → Notiser om urtavlor: `bridge:root=com.apple.NanoClockBridgeSettings#Watch%20Face%20Notifications`
- Klocka → Stadsförkortningar: `bridge:root=com.apple.NanoClockBridgeSettings&path=City%20Abbreviations`
- Klocka → Siri-ansiktsdatakällor: `bridge:root=com.apple.NanoClockBridgeSettings&path=Siri%20Face%20Data%20Sources`
- Snabbknapp: `bridge:root=ACTION_BUTTON_ID`
- Snabbknapp → Gester | Åtgärd: `bridge:root=ACTION_BUTTON_ID#StingSystemSettingsActionTypeGroupID`
- Snabbknapp → Träning: `bridge:root=ACTION_BUTTON_ID&path=StingSystemSettingsActionTypeItem`
- Snabbknapp → Träning → Inga: `bridge:root=ACTION_BUTTON_ID&path=StingSystemSettingsActionTypeItem#StingSystemSettingsSelectedActionTypeItem`
- Snabbknapp → Första tryck: `bridge:root=ACTION_BUTTON_ID#StingSystemSettingsWorkoutGroupID`
- Snabbknapp → Växla snabbt: `bridge:root=ACTION_BUTTON_ID&path=ShowQuickSwitch`
- Snabbknapp → Växla snabbt → Växla snabbt: `bridge:root=ACTION_BUTTON_ID&path=ShowQuickSwitch#StingQuickSwitchToggleGroup`
- Snabbknapp → Växla snabbt → Växla snabbt: `bridge:root=ACTION_BUTTON_ID&path=ShowQuickSwitch#Quick%20Switch`
- Snabbknapp → Växla snabbt → Inkluderade appar: `bridge:root=ACTION_BUTTON_ID&path=ShowQuickSwitch#StingQuickSwitchAppGroup`
- Buller: `bridge:root=com.apple.Noise.settings`
- Buller → Mätningar av ljud i omgivningen: `bridge:root=com.apple.Noise.settings#ENABLE_MEASUREMENTS_ID`
- Buller → Bullernotiser: `bridge:root=com.apple.Noise.settings#LOUD_NOTIFICATION_GROUP_ID`
- Buller → Bullertröskel: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID`
- Buller → Bullertröskel → Av: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#OFF`
- Buller → Bullertröskel → 80 decibel: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_80`
- Buller → Bullertröskel → 85 decibel: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_85`
- Buller → Bullertröskel → 90 decibel: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_90`
- Buller → Bullertröskel → 95 decibel: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_95`
- Buller → Bullertröskel → 100 decibel: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_100`
- Buller → Notisgruppering: `bridge:root=com.apple.Noise.settings&path=NOTIFICATION_COALESCING_ID`
- Kalender: `bridge:root=com.apple.NanoCalendarBridgeSettings`
- Kalender → NOTISER: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Kalender → Spegla min iPhone: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_MY_COMPANION_ID`
- Kalender → Anpassat…: `bridge:root=com.apple.NanoCalendarBridgeSettings#CUSTOM_ID`
- Kalender → KALENDRAR: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_RADIO_GROUP_ID`
- Kalender → Spegla min iPhone: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_MY_COMPANION_ID`
- Kalender → Anpassat…: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=CALENDARS_CUSTOM_ID`
- Kalender → Kommande aktiviteter: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Upcoming%20Events`
- Kalender → Inbjudningar: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitations`
- Kalender → Inbjudnas svar: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitee%20Responses`
- Kalender → Ändringar i delad kalender: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Shared%20Calendar%20Alerts`
- Walkie-talkie: `bridge:root=com.apple.tincan.settings`
- Walkie-talkie → Tillåt notiser: `bridge:root=com.apple.tincan.settings#ALLOW_NOTIFICATIONS_ID`
- Walkie-talkie → Skicka till Notiscenter: `bridge:root=com.apple.tincan.settings#SEND_TO_NOTIFICATION_CENTER_ID`
- Walkie-talkie → Notiser av: `bridge:root=com.apple.tincan.settings#NOTIFICATIONS_OFF_ID`
- Walkie-talkie → Notisgruppering: `bridge:root=com.apple.tincan.settings&path=NOTIFICATION_COALESCING_ID`
- Walkie-talkie → Vänner: `bridge:root=com.apple.tincan.settings#Friends`
- Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID`
- Siri → Fråga Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASK_SIRI_GROUP_ID`
- Siri → Lyssna efter: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_TRIGGER_ID`
- Siri → Lyssna efter → ”Siri” eller ”Hej Siri”: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_TRIGGER_ID#HS_JS_ID`
- Siri → Lyssna efter → ”Hej Siri”: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_TRIGGER_ID#HEY_SIRI_ID`
- Siri → Lyssna efter → Av: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_TRIGGER_ID#VOICE_TRIGGER_DISABLED_ID`
- Siri → Håll upp för att tala: `bridge:root=SIRI_WATCH_SETTINGS_ID#RAISE_TO_SPEAK_SWITCH_ID`
- Siri → Tryck på Digital Crown: `bridge:root=SIRI_WATCH_SETTINGS_ID#DIGITAL_CROWN_SWITCH_ID`
- Siri → Skicka automatiskt: `bridge:root=SIRI_WATCH_SETTINGS_ID#AUTOMATICALLY_SEND_MESSAGES_SWITCH_ID`
- Siri → Siri-svar: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=SIRI_RESPONSES_ID`
- Siri → Siri-svar → Visa alltid text för Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=SIRI_RESPONSES_ID#ALWAYS_SHOW_SIRI_CAPTIONS_SWITCH_ID`
- Siri → Siri-svar → Visa alltid tal: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=SIRI_RESPONSES_ID#ALWAYS_SHOW_SPEECH_SWITCH_ID`
- Siri → Siri-svar → Röstvolym: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=SIRI_RESPONSES_ID#CONSIDERATE_VOLUME_GROUP_ID`
- Siri → Siri-svar → Justera volymen automatiskt: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=SIRI_RESPONSES_ID#CONSIDERATE_VOLUME_SWITCH_ID`
- Siri → Siri-svar → Nivå: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=SIRI_RESPONSES_ID/CONSIDERATE_VOLUME_PROFILE_ID`
- Siri → Siri-svar → Nivå → Starkare ljud: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=SIRI_RESPONSES_ID/CONSIDERATE_VOLUME_PROFILE_ID#CONSIDERATE_VOLUME_PROFILE_LOUDER_ID`
- Siri → Siri-svar → Nivå → Förval: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=SIRI_RESPONSES_ID/CONSIDERATE_VOLUME_PROFILE_ID#CONSIDERATE_VOLUME_PROFILE_DEFAULT_ID`
- Siri → Siri-svar → Nivå → Tystare ljud: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=SIRI_RESPONSES_ID/CONSIDERATE_VOLUME_PROFILE_ID#CONSIDERATE_VOLUME_PROFILE_QUIETER_ID`
- Siri → Röst-feedback: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID`
- Siri → Röst-feedback → Alltid på: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_ALWAYS_ON_ID`
- Siri → Röst-feedback → Styr med tyst läge: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_CONTROL_WITH_SILENT_MODE_ID`
- Siri → Röst-feedback → Endast hörlurar: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_HEADPHONES_ONLY_ID`
- Siri → Röstvolym: `bridge:root=SIRI_WATCH_SETTINGS_ID#VOICE_VOLUME_GROUP_ID`
- Siri → Siri-förslag: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASSISTANT_SUGGESTIONS_GROUP_ID`
- Träning: `bridge:root=com.apple.SessionTrackerAppSettings`
- Träning → Visa målinformation: `bridge:root=com.apple.SessionTrackerAppSettings#PRO_SETTING_ENABLED_LABEL`
- Träning → Träningsvy: `bridge:root=com.apple.SessionTrackerAppSettings&path=METRIC_VIEW_ID`
- Träning → Autopaus: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID`
- Träning → Autopaus → Autopaus: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID#WorkoutAutoPauseSwitch`
- Träning → Starta träningspåminnelse: `bridge:root=com.apple.SessionTrackerAppSettings#AUTO_START_WORKOUT_NOTIFICATIONS_ENABLED_LABEL`
- Träning → Avsluta träningspåminnelse: `bridge:root=com.apple.SessionTrackerAppSettings#END_REMINDERS_ENABLED_LABEL`
- Träning → Tryck för att pausa: `bridge:root=com.apple.SessionTrackerAppSettings#CHORD_PRESS_PAUSE_WORKOUT_ENABLED_LABEL`
- Träning → Identifiera gymutrustning: `bridge:root=com.apple.SessionTrackerAppSettings#NFC_ENABLED_LABEL_ID`
- Träning → Takt-/hastighetsvy: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL`
- Träning → Takt-/hastighetsvy → Aktuellt: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#CURRENT_PACE_ID`
- Träning → Takt-/hastighetsvy → Medel: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#AVERAGE_PACE_ID`
- Träning → Träningsspellista: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID`
- Träning → Träningsspellista → Inga: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#NONE_AUTOSTART_ID`
- Träning → Träningsspellista → Spellistor: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#MUSIC_PLAYLIST_GROUP_ID`
- Träning → Spela upp från början: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_PLAY_FROM_BEGINNING_SETTING_ID`
- Träning → Blanda: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_SHUFFLE_SETTING_ID`
- Träning → Måttenheter: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID`
- Träning → Måttenheter → Kalorier: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_CALORIES_ID`
- Träning → Måttenheter → Kilokalorier: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOCALORIES_ID`
- Träning → Måttenheter → Kilojoule: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOJOULES_ID`
- Träning → Måttenheter → Yard: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_YARDS_ID`
- Träning → Måttenheter → Meter: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_METERS_ID`
- Träning → Måttenheter → Mile: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_MILES_ID`
- Träning → Måttenheter → Kilometer: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_KILOMETERS_ID`
- Träning → Måttenheter → Mile: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_MILES_ID`
- Träning → Måttenheter → Kilometer: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_KILOMETERS_ID`
- Träning → Röst-feedback: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_VOICE_FEEDBACK_LABEL`
- Träning → Dags för en promenad: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_FOOTER_ID`
- Träning → Lägg till nya träningar på Apple Watch: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_LABEL_ID`
- Träning → Strömsparläge: `bridge:root=com.apple.SessionTrackerAppSettings#LOW_POWER_MODE`
- Meddelanden: `bridge:root=com.apple.MessagesBridgeSettings`
- Meddelanden → Spegla min iPhone: `bridge:root=com.apple.MessagesBridgeSettings#MIRROR_MY_COMPANION_ID`
- Meddelanden → Anpassat: `bridge:root=com.apple.MessagesBridgeSettings#CUSTOM_ID`
- Meddelanden → Förvalssvar: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES`
- Meddelanden → Förvalssvar → Förvalssvar: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Default%20Replies`
- Meddelanden → Förvalssvar → Smarta svar: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Smart%20Replies`
- Meddelanden → Förvalssvar → Lägg till svar…: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Add%20reply%E2%80%A6`
- Meddelanden → Upprepa notiser: `bridge:root=com.apple.MessagesBridgeSettings&path=PLAY_ALERT_TONE`
- Meddelanden → Ljudmeddelanden: `bridge:root=com.apple.MessagesBridgeSettings&path=AudioMessagesMode`
- Skoltid: `bridge:root=SCHOOLTIME`
- Skoltid → Skoltid: `bridge:root=SCHOOLTIME#SCHEDULE_FEATURE_ACTIVE_TITLE`
- Enkel lösenkod | Handledsavkänning | Lås upp med iPhone | Lösenkod | Radera data | Slå på lösenkod | Stäng av lösenkod | Ändra lösenkod: `bridge:root=PASSCODE_ID`
- Enkel lösenkod | Handledsavkänning | Lås upp med iPhone | Lösenkod | Radera data | Slå på lösenkod | Stäng av lösenkod | Ändra lösenkod → Slå på lösenkod: `bridge:root=PASSCODE_ID#TOGGLE_PASSCODE_ID`
- Enkel lösenkod | Handledsavkänning | Lås upp med iPhone | Lösenkod | Radera data | Slå på lösenkod | Stäng av lösenkod | Ändra lösenkod → Ändra lösenkod: `bridge:root=PASSCODE_ID#CHANGE_PASSCODE_ID`
- Enkel lösenkod | Handledsavkänning | Lås upp med iPhone | Lösenkod | Radera data | Slå på lösenkod | Stäng av lösenkod | Ändra lösenkod → Enkel lösenkod: `bridge:root=PASSCODE_ID#SIMPLE_PASSCODE_SWITCH_ID`
- Enkel lösenkod | Handledsavkänning | Lås upp med iPhone | Lösenkod | Radera data | Slå på lösenkod | Stäng av lösenkod | Ändra lösenkod → Lås upp med iPhone: `bridge:root=PASSCODE_ID#AUTO_UNLOCK_SWITCH_ID`
- Enkel lösenkod | Handledsavkänning | Lås upp med iPhone | Lösenkod | Radera data | Slå på lösenkod | Stäng av lösenkod | Ändra lösenkod → Radera data: `bridge:root=PASSCODE_ID#ERASE_DATA_SWITCH_ID`
- Enkel lösenkod | Handledsavkänning | Lås upp med iPhone | Lösenkod | Radera data | Slå på lösenkod | Stäng av lösenkod | Ändra lösenkod → Handledsavkänning: `bridge:root=PASSCODE_ID#WRIST_DETECTION_CELL_ID`
- Enkel lösenkod | Handledsavkänning | Lås upp med iPhone | Lösenkod | Radera data | Slå på lösenkod | Stäng av lösenkod | Ändra lösenkod → Komplikationer: `bridge:root=PASSCODE_ID#SHOW_COMPLICATION_DATA_WHEN_LOCKED_GROUP_ID`
- Enkel lösenkod | Handledsavkänning | Lås upp med iPhone | Lösenkod | Radera data | Slå på lösenkod | Stäng av lösenkod | Ändra lösenkod → Visa data på låsskärm: `bridge:root=PASSCODE_ID#SHOW_COMPLICATION_DATA_WHEN_LOCKED_SWITCH_ID`
- Mail: `bridge:root=com.apple.NanoMailBridgeSettings`
- Mail → Spegla min iPhone: `bridge:root=com.apple.NanoMailBridgeSettings#MIRROR_MY_COMPANION_ID`
- Mail → Anpassat: `bridge:root=com.apple.NanoMailBridgeSettings#CUSTOM_ID`
- Mail → Mail-inställningar: `bridge:root=com.apple.NanoMailBridgeSettings#Mail%20Settings`
- Mail → Konton: `bridge:root=com.apple.NanoMailBridgeSettings&path=Accounts`
- Mail → Inkludera e-post: `bridge:root=com.apple.NanoMailBridgeSettings&path=Include%20Mail`
- Mail → Förhandsvisning: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview`
- Mail → Förhandsvisning → Inga: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#0`
- Mail → Förhandsvisning → 1 rad: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#1`
- Mail → Förhandsvisning → 2 rader: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#2`
- Mail → Förvalssvar: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies`
- Mail → Förvalssvar → Förvalssvar: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Default%20Replies`
- Mail → Förvalssvar → Lägg till svar…: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Add%20reply%E2%80%A6`
- Mail → Signatur: `bridge:root=com.apple.NanoMailBridgeSettings&path=Signature`
- Aktier | Börsvärde | Nuvarande pris | Prisändring | Procentändring | Vald aktie: Siri-kort: `bridge:root=com.apple.StocksBridgeSettings`
- Aktier | Börsvärde | Nuvarande pris | Prisändring | Procentändring | Vald aktie: Siri-kort → Urtavelskomplikation visar: `bridge:root=com.apple.StocksBridgeSettings#Clock%20Face%20Complication%20Shows`
- Aktier | Börsvärde | Nuvarande pris | Prisändring | Procentändring | Vald aktie: Siri-kort → Nuvarande pris: `bridge:root=com.apple.StocksBridgeSettings#Current%20Price`
- Aktier | Börsvärde | Nuvarande pris | Prisändring | Procentändring | Vald aktie: Siri-kort → Prisändring: `bridge:root=com.apple.StocksBridgeSettings#Points%20Change`
- Aktier | Börsvärde | Nuvarande pris | Prisändring | Procentändring | Vald aktie: Siri-kort → Procentändring: `bridge:root=com.apple.StocksBridgeSettings#Percentage%20Change`
- Aktier | Börsvärde | Nuvarande pris | Prisändring | Procentändring | Vald aktie: Siri-kort → Börsvärde: `bridge:root=com.apple.StocksBridgeSettings#Market%20Cap`
- Aktier | Börsvärde | Nuvarande pris | Prisändring | Procentändring | Vald aktie: Siri-kort → Siri-urtavlan visar aktiekurs för: `bridge:root=com.apple.StocksBridgeSettings#Siri%20Face%20Shows%20Quote%20For`
- Aktier | Börsvärde | Nuvarande pris | Prisändring | Procentändring | Vald aktie: Siri-kort → Vald aktie: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock`
- Aktier | Börsvärde | Nuvarande pris | Prisändring | Procentändring | Vald aktie: Siri-kort → Vald aktie → Vald aktie: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock#Selected%20Stock`
- Aktivitet: `bridge:root=com.apple.HealthAppsSettings`
- Aktivitet → Framstegsnotiser: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL`
- Aktivitet → Framstegsnotiser → Inga: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#ZERO_HOURS_ID`
- Aktivitet → Framstegsnotiser → Varannan timme: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#TWO_HOURS_ID`
- Aktivitet → Framstegsnotiser → Var fjärde timme: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#FOUR_HOURS_ID`
- Aktivitet → Framstegsnotiser → Var sjätte timme: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#SIX_HOURS_ID`
- Aktivitet → Framstegsnotiser → Var åttonde timme: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#EIGHT_HOURS_ID`
- Aktivitet → Prestationer: `bridge:root=com.apple.HealthAppsSettings#ACHIEVEMENTS_ENABLED_LABEL`
- Aktivitet → Veckosammanfattning: `bridge:root=com.apple.HealthAppsSettings#WEEKLY_SUMMARY_ENABLED_LABEL`
- Aktivitet → Dagliga träningstips: `bridge:root=com.apple.HealthAppsSettings#DAILY_PROGRESS_ENABLED_LABEL`
- Aktivitet → Uppnådda mål: `bridge:root=com.apple.HealthAppsSettings#GOAL_COMPLETIONS_ENABLED_LABEL`
- Aktivitet → Specialutmaningar: `bridge:root=com.apple.HealthAppsSettings#REMOTE_ACHIEVEMENTS_ENABLED_LABEL`
- Aktivitet → Notiser om aktivitetsdelning: `bridge:root=com.apple.HealthAppsSettings#ACTIVITY_SHARING_NOTIFICATIONS_ENABLED`
- Smart trave: `bridge:root=SMARTSTACK_LINK`
- Väder: `bridge:root=com.apple.weatherbridgesettings`
- Väder → Förvald stad: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City`
- Väder → Förvald stad → Förvald stad: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Default%20City`
- Väder → Förvald stad → Aktuell plats: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Current%20Location`
- Kontakter: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired`
- Kontakter → Sorteringsordning: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder`
- Kontakter → Sorteringsordning → För-, efternamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#0`
- Kontakter → Sorteringsordning → Efter-, förnamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#1`
- Kontakter → Visa efter: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder`
- Kontakter → Visa efter → För-, efternamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#1`
- Kontakter → Visa efter → Efter-, förnamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#2`
- Kontakter → Kortnamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName`
- Kontakter → Kortnamn → Kortnamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Short%20Name`
- Kontakter → Kortnamn → Förnamn och efternamnsinitial: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20&%20Last%20Initial`
- Kontakter → Kortnamn → Förnamnsinitial och efternamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Initial%20&%20Last%20Name`
- Kontakter → Kortnamn → Endast förnamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20Only`
- Kontakter → Kortnamn → Endast efternamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Last%20Name%20Only`
- Kontakter → Kortnamn → Föredra smeknamn: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Prefer%20Nicknames`
- Hjälpmedel: `bridge:root=ACCESSIBILITY_ID`
- Hjälpmedel → Syn: `bridge:root=ACCESSIBILITY_ID#VISION_GROUP`
- Hjälpmedel → VoiceOver: `bridge:root=ACCESSIBILITY_ID&path=VOICEOVER_ID`
- Hjälpmedel → Zooma: `bridge:root=ACCESSIBILITY_ID&path=ZOOM_ID`
- Hjälpmedel → Av-/På-etiketter: `bridge:root=ACCESSIBILITY_ID#OnOffLabelsEnabled`
- Hjälpmedel → Gråskala: `bridge:root=ACCESSIBILITY_ID#GrayscaleDisplay`
- Hjälpmedel → Minska genomskinlighet: `bridge:root=ACCESSIBILITY_ID#REDUCE_TRANSPARENCY`
- Hjälpmedel → Öka kontrast: `bridge:root=ACCESSIBILITY_ID#INCREASE_CONTRAST`
- Hjälpmedel → Textstorlek: `bridge:root=ACCESSIBILITY_ID#TEXT_SIZE`
- Hjälpmedel → Fet text: `bridge:root=ACCESSIBILITY_ID#BoldTextEnabled`
- Hjälpmedel → Minska rörelse: `bridge:root=ACCESSIBILITY_ID&path=ReduceMotion`
- Hjälpmedel → Klockspel: `bridge:root=ACCESSIBILITY_ID&path=TapticChimesCell`
- Hjälpmedel → Klockspel → Klockspel: `bridge:root=ACCESSIBILITY_ID&path=TapticChimesCell#Chimes`
- Hjälpmedel → Klockspel → Schema: `bridge:root=ACCESSIBILITY_ID&path=TapticChimesCell/CHIMES_SCHEDULE_ID`
- Hjälpmedel → Klockspel → Schema → Timvis: `bridge:root=ACCESSIBILITY_ID&path=TapticChimesCell/CHIMES_SCHEDULE_ID#Hourly`
- Hjälpmedel → Klockspel → Schema → 30 minuter: `bridge:root=ACCESSIBILITY_ID&path=TapticChimesCell/CHIMES_SCHEDULE_ID#30%20minutes`
- Hjälpmedel → Klockspel → Schema → 15 minuter: `bridge:root=ACCESSIBILITY_ID&path=TapticChimesCell/CHIMES_SCHEDULE_ID#15%20minutes`
- Hjälpmedel → Klockspel → Ljud: `bridge:root=ACCESSIBILITY_ID&path=TapticChimesCell/CHIMES_SOUNDS_ID`
- Hjälpmedel → Klockspel → Ljud → Klockor: `bridge:root=ACCESSIBILITY_ID&path=TapticChimesCell/CHIMES_SOUNDS_ID#Bells`
- Hjälpmedel → Klockspel → Ljud → Fåglar: `bridge:root=ACCESSIBILITY_ID&path=TapticChimesCell/CHIMES_SOUNDS_ID#Birds`
- Hjälpmedel → Motorik: `bridge:root=ACCESSIBILITY_ID#MotorGroupCell`
- Hjälpmedel → Intervall för klick på sidoknapp: `bridge:root=ACCESSIBILITY_ID&path=SideButton`
- Hjälpmedel → Intervall för klick på sidoknapp → Klickhastighet: `bridge:root=ACCESSIBILITY_ID&path=SideButton#CLICK_SPEED_GROUP_CELL`
- Hjälpmedel → Intervall för klick på sidoknapp → Förval: `bridge:root=ACCESSIBILITY_ID&path=SideButton#SIDE_CLICK_SPEED_DEFAULT`
- Hjälpmedel → Intervall för klick på sidoknapp → Långsam: `bridge:root=ACCESSIBILITY_ID&path=SideButton#SIDE_CLICK_SPEED_SLOW`
- Hjälpmedel → Intervall för klick på sidoknapp → Långsammast: `bridge:root=ACCESSIBILITY_ID&path=SideButton#SIDE_CLICK_SPEED_SLOWEST`
- Hjälpmedel → Pekhjälpmedel: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell`
- Hjälpmedel → Pekhjälpmedel → Pekhjälpmedel: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell#TOUCH_ACCOMMODATIONS_SWITCHER`
- Hjälpmedel → Pekhjälpmedel → Hålltid: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell#HoldDurationGroup`
- Hjälpmedel → Pekhjälpmedel → Hålltid: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell#HoldDuration`
- Hjälpmedel → Pekhjälpmedel → Ignorera upprepning: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell#IgnoreRepeatGroup`
- Hjälpmedel → Pekhjälpmedel → Ignorera upprepning: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell#IgnoreRepeat`
- Hjälpmedel → Pekhjälpmedel → Tryckhjälp: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell#Tap%20Assistance`
- Hjälpmedel → Pekhjälpmedel → Av: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell#OFF`
- Hjälpmedel → Pekhjälpmedel → Använd inledande beröring: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell#ACTIVATE_ON_TOUCH`
- Hjälpmedel → Pekhjälpmedel → Använd slutberöring: `bridge:root=ACCESSIBILITY_ID&path=TouchAccommodationsCell#ACTIVATE_ON_RELEASE`
- Hjälpmedel → Rullstolsaktivitet: `bridge:root=ACCESSIBILITY_ID#MOBILITY`
- Hjälpmedel → Walkie-talkie: `bridge:root=ACCESSIBILITY_ID#WalkieTalkieTapToTalkGroup`
- Hjälpmedel → Tryck för att prata: `bridge:root=ACCESSIBILITY_ID#WalkieTalkieTapToTalk`
- Hjälpmedel → Appväxlare: `bridge:root=ACCESSIBILITY_ID#AppSwitcherAutoSelectGroup`
- Hjälpmedel → Välj app i fokus automatiskt: `bridge:root=ACCESSIBILITY_ID#AppSwitcherAutoSelect`
- Hjälpmedel → Siri: `bridge:root=ACCESSIBILITY_ID&path=SIRI_CELL_ID`
- Hjälpmedel → Siri → Skriv till Siri: `bridge:root=ACCESSIBILITY_ID&path=SIRI_CELL_ID#Type%20to%20Siri`
- Hjälpmedel → Hörsel: `bridge:root=ACCESSIBILITY_ID#HEARING`
- Hjälpmedel → RTT: `bridge:root=ACCESSIBILITY_ID&path=RTT_ID`
- Hjälpmedel → RTT → RTT: `bridge:root=ACCESSIBILITY_ID&path=RTT_ID#RTT_ROW_ID`
- Hjälpmedel → Monoljud: `bridge:root=ACCESSIBILITY_ID#MonoAudioEnabled`
- Hjälpmedel → Höger/vänster stereobalans: `bridge:root=ACCESSIBILITY_ID#LEFT_RIGHT_BALANCE_SPOKEN`
- Hjälpmedel → Notiser om hörlurar: `bridge:root=ACCESSIBILITY_ID#HeadphoneNotificationsID`
- Hjälpmedel → Hörapparater: `bridge:root=ACCESSIBILITY_ID#HearingDevicesComplicationGroupID`
- Hjälpmedel → Komplikation: `bridge:root=ACCESSIBILITY_ID&path=HearingDevicesComplicationRowID`
- Hjälpmedel → Komplikation → Mikrofonvolym: `bridge:root=ACCESSIBILITY_ID&path=HearingDevicesComplicationRowID#Mic%20Volume`
- Hjälpmedel → Komplikation → Program: `bridge:root=ACCESSIBILITY_ID&path=HearingDevicesComplicationRowID#Program`
- Hjälpmedel → Hastighet för haptisk tid: `bridge:root=ACCESSIBILITY_ID#TapticTimeSpeedAdjustmentGroup`
- Hjälpmedel → Hjälpmedelsgenväg: `bridge:root=ACCESSIBILITY_ID&path=AX_SHORTCUT_ID`
- Kartor | Svängsignaler: `bridge:root=com.apple.NanoMapsBridgeSettings`
- Kartor | Svängsignaler → Svängsignaler: `bridge:root=com.apple.NanoMapsBridgeSettings#Turn%20Alerts`
- Kartor | Svängsignaler → Köra: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving`
- Kartor | Svängsignaler → Köra med CarPlay: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving%20with%20CarPlay`
- Kartor | Svängsignaler → Gång: `bridge:root=com.apple.NanoMapsBridgeSettings#Walking`
- Kartor | Svängsignaler → Cykling: `bridge:root=com.apple.NanoMapsBridgeSettings#Cycling`
- Kartor | Svängsignaler → Visa navigation: `bridge:root=com.apple.NanoMapsBridgeSettings#Show%20Navigation`
- Kartor | Svängsignaler → Kollektivt: `bridge:root=com.apple.NanoMapsBridgeSettings#Transit`
- Kartor | Svängsignaler → Bygginfo: `bridge:root=com.apple.NanoMapsBridgeSettings#Build%20Info%3A`
- E-post och Kalender: `bridge:root=com.apple.BridgeRemoteAccounts`
- E-post och Kalender → Konton: `bridge:root=com.apple.BridgeRemoteAccounts#Accounts`
- E-post och Kalender → Lägg till Google-konto…: `bridge:root=com.apple.BridgeRemoteAccounts#ADD_GOOGLE_ACCOUNT`
- E-post och Kalender → Hämta: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch`
- E-post och Kalender → Hämta → Av: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Off`
- E-post och Kalender → Hämta → Timvis: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Hourly`
- E-post och Kalender → Hämta → 30 min: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#30%20min`
- E-post och Kalender → Hämta → 15 min: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#15%20min`
- Hjärta: `bridge:root=com.apple.HeartRateSettings`
- Hjärta → Hjärta: `bridge:root=com.apple.HeartRateSettings#1`
- Hjärta → Meddelanden om pulsnivå: `bridge:root=com.apple.HeartRateSettings#2`
- Hjärta → Hög puls: `bridge:root=com.apple.HeartRateSettings#3`
- Hjärta → Låg puls: `bridge:root=com.apple.HeartRateSettings#4`
- Hjärta → Oregelbundna hjärtslag: `bridge:root=com.apple.HeartRateSettings#5`
- Hjärta → Visa registrerade EKG i Hälsa: `bridge:root=com.apple.HeartRateSettings#6`
- Hjärta → EKG: `bridge:root=com.apple.HeartRateSettings#7`
- App Store: `bridge:root=com.apple.BridgeAppStoreDaemonSettings`
- App Store → Automatiska hämtningar: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#automaticDownloadSpecifier`
- App Store → Uppdatera automatiskt: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#Automatic%20Updates`
- Gester: `bridge:root=ELTON_SETTINGS_ID`
- Gester → Gester: `bridge:root=ELTON_SETTINGS_ID#Gestures`
- Gester → Tryck snabbt två gånger: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID`
- Gester → Tryck snabbt två gånger → Tryck snabbt två gånger: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID#Double%20Tap`
- Gester → Tryck snabbt två gånger → Uppspelning: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID#playbackSettingsGroup`
- Gester → Tryck snabbt två gånger → Spela upp/pausa: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID#playbackSettingsPlayPause`
- Gester → Tryck snabbt två gånger → Hoppa över: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID#playbackSettingsSkip`
- Gester → Tryck snabbt två gånger → Smart trave: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID#smartStackGroup`
- Gester → Tryck snabbt två gånger → Fortsätt: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID#smartStackSettingsAdvance`
- Gester → Tryck snabbt två gånger → Välj: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID#smartStackSettingsSelect`
- Gester → Tryck snabbt två gånger → När Apple Vision Pro används: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID#ignoreWhileVisionProDonned`
- Gester → Tryck snabbt två gånger → Ignorera dubbeltryck: `bridge:root=ELTON_SETTINGS_ID&path=ELTON_DOUBLE_TAP_ID#ignoreDoubleTap`
- Gester → Handledsvridning: `bridge:root=ELTON_SETTINGS_ID#Wrist%20Flick`
- Gester → Täck för att tysta: `bridge:root=ELTON_SETTINGS_ID#Cover%20to%20Mute`
- Sömn: `bridge:root=com.apple.NanoBedtimeBridgeSettings`
- Sömn → Ställ in Sömn i appen Hälsa: `bridge:root=com.apple.NanoBedtimeBridgeSettings#SET_UP_SLEEP_CELL_ID`
- Lagringsgräns | Musik | Synkad musik: `bridge:root=com.apple.NanoMusicBridgeSettings`
- Lagringsgräns | Musik | Synkad musik → SPELLISTOR OCH ALBUM: `bridge:root=com.apple.NanoMusicBridgeSettings#PLAYLISTS%20&%20ALBUMS`
- Lagringsgräns | Musik | Synkad musik → Lägg till musik…: `bridge:root=com.apple.NanoMusicBridgeSettings#Add%20Music%E2%80%A6`
- Plånbok och Apple Pay: `bridge:root=com.apple.NanoPassbookBridgeSettings`
- Plånbok och Apple Pay → Apple Cash: `bridge:root=com.apple.NanoPassbookBridgeSettings#Apple%C2%A0Cash`
- Plånbok och Apple Pay → Lägg till kort: `bridge:root=com.apple.NanoPassbookBridgeSettings#Add%20Card`
- Plånbok och Apple Pay → Notiser: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Plånbok och Apple Pay → Spegla min iPhone: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_MY_COMPANION_ID`
- Plånbok och Apple Pay → Anpassat: `bridge:root=com.apple.NanoPassbookBridgeSettings#CUSTOM_ID`
- Hälsa: `bridge:root=com.apple.BridgeHealthSettings`
- Hitta min Apple Watch: `bridge:root=ActiveWatch`
- Hitta min Apple Watch → Parkoppla en ny Watch: `bridge:root=ActiveWatch&path=Pair%20New%20Watch`
- Mindfulness: `bridge:root=com.apple.MindSettings`
- Mindfulness → Tillåt notiser: `bridge:root=com.apple.MindSettings#ALLOW_NOTIFICATIONS_ID`
- Mindfulness → Skicka till Notiscenter: `bridge:root=com.apple.MindSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- Mindfulness → Notiser av: `bridge:root=com.apple.MindSettings#NOTIFICATIONS_OFF_ID`
- Mindfulness → Mindfulness-påminnelser: `bridge:root=com.apple.MindSettings#MIND_GROUP_ID`
- Mindfulness → Start på dagen: `bridge:root=com.apple.MindSettings#MIND_START_OF_DAY_REMINDER`
- Mindfulness → Slutet av dagen: `bridge:root=com.apple.MindSettings#MIND_END_OF_DAY_REMINDER`
- Mindfulness → Lägg till påminnelse…: `bridge:root=com.apple.MindSettings#Add%20Reminder%E2%80%A6`
- Mindfulness → Veckosammanfattning: `bridge:root=com.apple.MindSettings#MIND_WEEKLY_SUMMARY_ID`
- Mindfulness → Ljud av idag: `bridge:root=com.apple.MindSettings#MIND_MUTE_FOR_TODAY_ID`
- Mindfulness → Frekvens: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID`
- Mindfulness → Frekvens → 4 andetag/minut: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_4`
- Mindfulness → Frekvens → 5 andetag/minut: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_5`
- Mindfulness → Frekvens → 6 andetag/minut: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_6`
- Mindfulness → Frekvens → 7 andetag/minut: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_7`
- Mindfulness → Frekvens → 8 andetag/minut: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_8`
- Mindfulness → Frekvens → 9 andetag/minut: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_9`
- Mindfulness → Frekvens → 10 andetag/minut: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_10`
- Mindfulness → Haptik: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID`
- Mindfulness → Haptik → Inga: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#NONE_ID`
- Mindfulness → Haptik → Minimal: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#MINIMAL_ID`
- Mindfulness → Haptik → Tydlig: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#PROMINENT_ID`
- Podcaster: `bridge:root=com.apple.private.PodcastsBridgeSettings`
- Telefon: `bridge:root=com.apple.PhoneBridgeSettings`
- Telefon → Samtal: `bridge:root=com.apple.PhoneBridgeSettings#carrier_direct_calling_group_id`
- Telefon → Ringsignal: `bridge:root=com.apple.PhoneBridgeSettings#RINGTONE`
- Telefon → Ljud: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_SOUND`
- Telefon → Haptisk: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_HAPTIC`
- Djup: `bridge:root=com.apple.DepthCompanionSettings`
- Snabbknapp: `bridge:root=STING_TITLE`
- Operatörs­tjänster: `bridge:root=CARRIER_SETTINGS`
- Mobilnät: `bridge:root=CELLULAR_ID`
- Dock: `bridge:root=DOCK`
- Dock → Arrangera Dock: `bridge:root=DOCK#OrderingOptionGroup`
- Dock → Senaste: `bridge:root=DOCK#Recents`
- Dock → Favoriter: `bridge:root=DOCK#Favorites`
- Dock: `bridge:root=DOCK.0`
- Dock → Arrangera Dock: `bridge:root=DOCK.0#OrderingOptionGroup`
- Dock → Senaste: `bridge:root=DOCK.0#Recents`
- Dock → Favoriter: `bridge:root=DOCK.0#Favorites`
- Ljudböcker: `bridge:root=com.apple.NanoBooks.BridgeSettings`
- Ljudböcker → Logga in: `bridge:root=com.apple.NanoBooks.BridgeSettings#Sign%20In`
- Bildbegränsning | Markerat fotoalbum: `bridge:root=com.apple.mobileslideshow`
- Skicka läskvittenser: `bridge:root=com.apple.MessagesBridgeSettings%23READ_RECEIPTS`